<resources>
    <string name="app_name">Connect four</string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_game">GameActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_game_setup">GameSetupActivity</string>
    <string name="title_activity_finished_game">FinishedGameActivity</string>
    <string name="fragment_start_screen_high_score">High score</string>
    <string name="fragment_start_screen_resume_game">Resume game</string>
    <string name="fragment_start_screen_start_new_game">Start new game</string>
    <string name="activity_game_setup_second_player_name">Second player name</string>
    <string name="activity_game_setup_first_player_name">First player name</string>
    <string name="activity_game_setup_setup_game">Setup game</string>
    <string name="activity_game_start_player_number">1</string>
    <string name="activity_game_start_player_text">Player:</string>
    <string name="activity_game_result_rematch">Rematch</string>
    <string name="quit">Really quit?</string>
    <string name="really_quit">Are you sure you want to quit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="game_title_text">Connect 4</string>
    <string name="activity_game_result">Moves</string>
    <string name="game_result_winner_big">"Winner "</string>
    <string name="gameresultactivity">"Draw "</string>

</resources>
