<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/blue_500"
    tools:context="se.umu.dehu0004.greed.StartActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/fragment_start_screen_high_score"
        android:textColor="@color/white"
        android:gravity="center_horizontal|center_vertical"
        android:textSize="30sp"/>

    <ListView
        android:id="@+id/highScoreList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:layout_marginBottom="5dp"
        android:background="@drawable/rounded_corner"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:weightSum="2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/setupButton"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="?android:attr/borderlessButtonStyle"
            android:background="@color/light_blue_A700"
            android:text="@string/fragment_start_screen_start_new_game"
            android:textColor="@color/white"
            android:textSize="25sp"/>

        <Button
            android:id="@+id/resumeButton"
            android:layout_margin="5dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            style="?android:attr/borderlessButtonStyle"
            android:background="@color/light_blue_A700"
            android:text="@string/fragment_start_screen_resume_game"
            android:textColor="@color/white"
            android:textSize="25sp"
           />
    </LinearLayout>

</LinearLayout>
